--- a/src/styles/utils/_utils.scss
+++ b/src/styles/utils/_utils.scss
@@ -1,3 +1,8 @@
+@import
+    'bullet-list',
+    'button',
+    'table';
+
 // ======================================================================
 //  border
 // ======================================================================
@@ -243,3 +248,4 @@
         }
     }
 }
+
