link - unit tests - start of external link refactor

--- a/src/components/link/link.html
+++ b/src/components/link/link.html
@@ -1,14 +1,13 @@
 <transition duration="0">
-    <router-link class="m-link"
+    <router-link ref="router" class="m-link"
                  :class="{ 'm--is-unvisited': isUnvisited,
                            'm--is-disabled': disabled,
                            'm--no-underline': !underline,
-                           'm--is-button': isButton,
                            'm--is-vanilla': vanilla,
                            'm--has-right-icon' : isIconPositionRight }"
-                 :to="rooterLinkUrl"
+                 :to="routerLinkUrl"
                  v-if="isRouterLink">
-        <m-icon :name="iconName" :style="{ fontSize: iconSize }" class="m-link__icon" v-if="hasIcon" aria-hidden="true"></m-icon>
+        <m-icon :name="propIconName" :size="iconSize" class="m-link__icon" v-if="hasIcon" aria-hidden="true"></m-icon>
         <span class="m-link__text">
             <slot></slot>
         </span>
@@ -21,7 +20,7 @@
                  'm--is-vanilla': vanilla,
                  'm--has-right-icon' : isIconPositionRight }"
        :href="propUrl"
-       v-if="isLink || isExternalLink || isButton"
+       v-if="!isRouterLink"
        ref="link" @click="onClick">
         <m-icon class="m-link__icon" :name="propIconName" :size="iconSize" v-if="hasIcon" aria-hidden="true"></m-icon>
         <span class="m-link__text">
