--- a/src/components/steppers/steppers.html
+++ b/src/components/steppers/steppers.html
@@ -1,7 +1,8 @@
 <div class="m-steppers">
     <ul class="m-steppers__wrap" :class="{ 'm--is-last': last }">
-        <slot></slot>
         <div aria-hidden="true" class="m-steppers__line" :class="{ 'm--is-anim-active': isAnimActive }" ref="line"></div>
+        <div class="m-steppers__content">
+            <slot></slot>
+        </div>
     </ul>
 </div>
-
