Fix default line size in js

--- a/src/components/steppers/steppers.scss
+++ b/src/components/steppers/steppers.scss
@@ -5,12 +5,15 @@ $m-steppers-item--max-width: 90px;
 .m-steppers {
     &__wrap {
         position: relative;
+        display: flex;
+        justify-content: space-between;
+        margin: 0;
     }
 
-    &__line {
+    &__selected-line {
         position: absolute;
         top: calc(#{$m-steppers-item--circle-size} / 2);
-        left: calc(#{$m-steppers-item--circle-size} / 2);
+        left: 0;
         width: 0;
         content: '';
         height: 2px;
@@ -18,50 +21,14 @@ $m-steppers-item--max-width: 90px;
         z-index: 1;
     }
 
-    &__content {
-        position: relative;
-        display: flex;
-        justify-content: space-between;
-        margin: 0;
-
-        &::before {
-            position: absolute;
-            top: calc(#{$m-steppers-item--circle-size} / 2);
-            left: calc(#{$m-steppers-item--circle-size} / 2);
-            right: calc(#{$m-steppers-item--circle-size} / 2);
-            content: '';
-            height: 2px;
-            background: $m-color--grey-darker;
-        }
-    }
-
-    .m-steppers-item:first-child {
-        position: relative;
-
-        &::before {
-            position: absolute;
-            top: calc(#{$m-steppers-item--circle-size} / 2);
-            left: 0;
-            right: 50%;
-            content: '';
-            height: 2px;
-            background: $m-color--white;
-            z-index: -1;
-        }
-    }
-
-    .m-steppers-item:last-child {
-        position: relative;
-
-        &::before {
-            position: absolute;
-            top: calc(#{$m-steppers-item--circle-size} / 2);
-            left: 50%;
-            right: 0;
-            content: '';
-            height: 2px;
-            background: $m-color--white;
-            z-index: -1;
-        }
+    &__default-line {
+        position: absolute;
+        top: calc(#{$m-steppers-item--circle-size} / 2);
+        left: 0;
+        right: 0;
+        content: '';
+        height: 2px;
+        background: $m-color--grey-darker;
+        z-index: 1;
     }
 }
