Put radio-group label font to normal

--- a/src/components/radio-group/radio-group.scss
+++ b/src/components/radio-group/radio-group.scss
@@ -5,7 +5,7 @@ $m-radio--width: 16px;
     &__label {
         margin-top: 0;
         margin-bottom: $m-margin--s;
-        font-size: $m-font-size--l;
+        font-size: $m-font-size;
         font-weight: $m-font-weight--bold;
     }
 
