--- a/src/components/limit-text/limit-text.scss
+++ b/src/components/limit-text/limit-text.scss
@@ -3,7 +3,7 @@
 
     &__container {
         overflow: hidden;
-        transition: max-height 0.5s;
+        transition: max-height $m-transition-duration;
 
         & > *:first-child {
             margin-top: 0 !important;
