--- a/src/styles/abstracts/_var-color.scss
+++ b/src/styles/abstracts/_var-color.scss
@@ -50,7 +50,7 @@ $m-color--warning-lightest: #fffdcf !default;
 // ======================================================================
 //  Error colors
 // ======================================================================
-$m-color--error-dark: #cc0000 !default;
+$m-color--error-dark: #c00 !default;
 $m-color--error: $m-color--ul-red !default;
 $m-color--error-light: #f7081f !default;
 $m-color--error-lightest: #ffdcdc !default;
