--- a/src/components/list-item/list-item.html
+++ b/src/components/list-item/list-item.html
@@ -1,5 +1,5 @@
 <!-- <transition @enter="transitionEnter" @after-enter="transitionAfterEnter" @leave="transitionLeave"> -->
-<li class="m-list-item" :class="{ 'm--is-disabled': disabled, 'm--is-waiting': isWaiting, 'm--has-slot': hasSlot, 'm--has-icon': hasIcon, 'm--has-menu': hasMenu, 'm--is-full-lenght': fullLenght }">
+<li class="m-list-item" :class="{ 'm--is-disabled': disabled, 'm--is-waiting': isWaiting, 'm--has-slot': $slots['trigger'], 'm--has-icon': hasIcon, 'm--has-menu': $slots['menu'], 'm--is-full-lenght': fullLenght }">
     <div class="m-list-item__content">
         <slot></slot>
     </div>
@@ -11,11 +11,11 @@
             </m-icon-button>
         </div>
 
-        <div class="m-list-item__icon" v-if="hasMenu && !hasIcon && !isWaiting">
+        <div class="m-list-item__icon" v-if="$slots['menu'] && !hasIcon && !isWaiting">
             <slot name="menu"></slot>
         </div>
 
-        <div class="m-list-item__slot" v-if="hasSlot && !hasIcon && !isWaiting">
+        <div class="m-list-item__slot" v-if="$slots['trigger'] && !hasIcon && !isWaiting">
             <slot name="trigger"></slot>
         </div>
 
