M-file-select: unit tests

--- a/src/components/file-select/file-select.html
+++ b/src/components/file-select/file-select.html
@@ -1,4 +1,4 @@
-<div class="m-file-select">
+<div class="m-file-select" @click="onClick">
     <input ref="inputFile" type="file" :id="id" class="m-file-select__hidden" @change="processFile" :disabled="disabled || isWaiting" tabindex="-1" :multiple="multiple">
     <label :for="id" class="m-file-select__hidden">
             <m-i18n v-if="!hasLabel" k="m-select-file:label"></m-i18n>
