--- a/src/components/dialog/dialog.html
+++ b/src/components/dialog/dialog.html
@@ -5,8 +5,9 @@
             <div v-show="propOpen"
                  class="m-dialog__wrap m--is-dialog"
                  :class="[{ 'm--is-open': propOpen,
-                            'm--is-small': size == 'small',
-                            'm--is-full-screen': size == 'full-screen',
+                            'm--is-small': sizeSmall,
+                            'm--is-large': sizeLarge,
+                            'm--is-full-screen': sizeFullSceen,
                             'm--is-close-on-backdrop': closeOnBackdrop,
                             'm--is-disabled':disabled }, className]"
                  @click.self="backdropClick()"
