--- a/src/components/dialog/dialog.scss
+++ b/src/components/dialog/dialog.scss
@@ -37,61 +37,68 @@ $m-dialog--max-width--s: 420px !default;
             display: block;
         }
 
-        @media screen and (min-width: $m-mq--min--s) {
-            padding: $m-padding--l $m-padding--l 0 $m-padding--l;
-        }
-
         &.m--is-close-on-backdrop {
             cursor: pointer;
         }
 
         &.m--is-enter-active,
         &.m--is-leave-active {
-            @media screen and (max-width: #{$m-mq--max--s}) {
+            &.m--is-full-screen {
                 transition-duration: 0.6s;
             }
 
-            @media screen and (min-width: #{$m-mq--min--s}) {
+            &:not(.m--is-full-screen) {
                 transition-duration: $m-transition-duration;
             }
         }
 
         &.m--is-enter,
         &.m--is-leave-to {
-            .m-dialog__article {
-                @media screen and (max-width: #{$m-mq--max--s}) {
-                    transform: translate3d(0, 110%, 0);
-                }
-
-                @media screen and (min-width: #{$m-mq--min--s}) {
+            &:not(.m--is-full-screen) {
+                .m-dialog__article {
                     transform: translate3d(0, $m-padding--l, 0) scale(0.98);
                     opacity: 0;
                 }
+            }
+
+            &.m--is-full-screen {
+                .m-dialog__article {
+                    transform: translate3d(0, 110%, 0);
+                }
+            }
+        }
+
+        &:not(.m--is-full-screen) {
+            padding: $m-padding--l $m-padding--l 0 $m-padding--l;
+
+            .m-dialog__article {
+                transition: transform $m-transition-duration ease, opacity $m-transition-duration--s linear;
+                margin-top: auto;
+                margin-bottom: auto;
+                max-width: $m-dialog--max-width;
+                transform: translate3d(0, 0, 0);
             }
         }
 
         &.m--is-full-screen {
             .m-dialog__article {
-                @media screen and (min-width: #{$m-mq--min--s}) {
-                    max-width: 100%;
-                    height: 100%;
-                }
+                transition: transform $m-transition-duration--l ease;
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                margin: 0 !important; //style for IE
             }
         }
 
         &.m--is-large {
             .m-dialog__article {
-                @media screen and (min-width: #{$m-mq--min--s}) {
-                    max-width: $m-dialog--max-width--l;
-                }
+                max-width: $m-dialog--max-width--l;
             }
         }
 
         &.m--is-small {
             .m-dialog__article {
-                @media screen and (min-width: #{$m-mq--min--s}) {
-                    max-width: $m-dialog--max-width--s;
-                }
+                max-width: $m-dialog--max-width--s;
             }
         }
     }
@@ -106,21 +113,21 @@ $m-dialog--max-width--s: 420px !default;
         flex-direction: column;
         max-height: 100%;
 
-        @media screen and (max-width: #{$m-mq--max--s}) {
-            transition: transform 0.6s ease;
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            margin: 0 !important; //style for IE
-        }
+        // @media screen and (max-width: #{$m-mq--max--s}) {
+        //     transition: transform 0.6s ease;
+        //     position: absolute;
+        //     top: 0;
+        //     bottom: 0;
+        //     margin: 0 !important; //style for IE
+        // }
 
-        @media screen and (min-width: #{$m-mq--min--s}) {
-            transition: transform $m-transition-duration ease, opacity $m-transition-duration--s linear;
-            margin-top: auto;
-            margin-bottom: auto;
-            max-width: $m-dialog--max-width;
-            transform: translate3d(0, 0, 0);
-        }
+        // @media screen and (min-width: #{$m-mq--min--s}) {
+        //     transition: transform $m-transition-duration ease, opacity $m-transition-duration--s linear;
+        //     margin-top: auto;
+        //     margin-bottom: auto;
+        //     max-width: $m-dialog--max-width;
+        //     transform: translate3d(0, 0, 0);
+        // }
 
         @include m-is-ie() {
             margin: $m-padding--l*2 auto;
