--- a/src/components/dialog/dialog.scss
+++ b/src/components/dialog/dialog.scss
@@ -148,7 +148,7 @@ $m-dialog--max-width--s: 420px !default;
 
     &__header {
         position: relative;
-        background: $m-color--black-grey;
+        background: $m-color--grey-darker;
         color: $m-color--white;
         justify-content: space-between;
 
