--- a/src/styles/abstracts/_var-layout.scss
+++ b/src/styles/abstracts/_var-layout.scss
@@ -1,7 +1,10 @@
 // ======================================================================
 //  Max and min width
 // ======================================================================
+$m-max-width--xl: 1400px !default;
+$m-max-width--l: 1200px !default;
 $m-max-width: 1000px !default;
+$m-max-width--s: 800px !default;
 $m-max-width--text: 720px !default;
 $m-min-width: 320px !default;
 
