--- a/src/components/dialog/dialog.html
+++ b/src/components/dialog/dialog.html
@@ -8,6 +8,7 @@
                             'm--is-small': sizeSmall,
                             'm--is-large': sizeLarge,
                             'm--is-full-screen': sizeFullSceen,
+                            'm--has-body-max-width': bodyMaxWidth,
                             'm--is-close-on-backdrop': closeOnBackdrop,
                             'm--is-disabled':disabled }, className]"
                  @click.self="backdropClick()"
@@ -15,7 +16,9 @@
                 <article class="m-dialog__article" :style="{ width: propWidth, 'margin-left': marginLeft }" ref="article">
                     <header>
                         <div class="m-dialog__header"
-                                :class="{ 'm--has-title': hasTitle, 'm--no-padding': !padding || !paddingHeader }">
+                             :class="{ 'm--has-title': hasTitle,
+                                       'm--has-content': hasHeader,
+                                       'm--no-padding': !padding || !paddingHeader }">
                             <h2 v-if="hasTitle">{{ title }}</h2>
                             <slot name="header"></slot>
                             <m-icon-button @click="closeDialog()" icon-name="close" skin="dark" class="m-dialog__header__close-button">
