--- a/src/styles/abstracts/_var-layout.scss
+++ b/src/styles/abstracts/_var-layout.scss
@@ -12,6 +12,7 @@ $m-min-width: 320px !default;
 //  Box min-height and min width
 // ======================================================================
 $m-box--min-height: 72px !default;
+$m-min-height-header: 88px !default;
 
 // ======================================================================
 //  Margin
