--- a/src/components/fullpage/fullpage.html
+++ b/src/components/fullpage/fullpage.html
@@ -2,38 +2,32 @@
     <slot name="trigger"></slot>
     <portal :target-el="'#' + propId">
         <transition name="m--is">
-            <div v-show="propOpen" class="m-fullpage__wrap m--is-origin-bottom" :class="[{ 'm--is-open': propOpen,
-                               'm--is-disabled':disabled,
-                               'm--is-centered':isCentered },
-                               className ]" ref="dialogWrap">
-                <article class="m-fullpage__article" ref="article">
-                    <div class="m-fullpage__body">
-                        <header class="m-fullpage__header">
-                            <div class="m-fullpage__header__left" v-if="hasMenuButton">
-                                <slot name="header-left">
-                                    <m-icon-button icon-name="m-index" @click="menu()" skin="dark"></m-icon-button>
-                                </slot>
-                            </div>
+            <div class="m-fullpage__wrap"
+                 :class="[{ 'm--is-open': propOpen,
+                            'm--is-disabled':disabled },
+                            className ]"
+                 ref="dialogWrap"
+                 v-show="propOpen">
+                <section class="m-fullpage__article" ref="article">
+                    <header>
+                        <div class="m-fullpage__header">
                             <div class="m-fullpage__header__center">
                                 <slot name="header"></slot>
                             </div>
-                            <div class="m-fullpage__header__right">
-                                <slot name="header-right">
-                                    <m-icon-button @click="closeDialog" icon-name="close" skin="dark" class="m-fullpage__close-button" v-if="closeButton">
-                                        <m-i18n k="m-sidebar:close"></m-i18n>
-                                    </m-icon-button>
-                                </slot>
+                            <div class="m-fullpage__header__right" v-if="hasHeaderRightSlot">
+                                <slot name="header-right"></slot>
                             </div>
-
-                        </header>
-                        <div class="m-fullpage__content">
-                            <slot></slot>
                         </div>
-                        <footer class="m-fullpage__footer">
-                            <slot name="footer"></slot>
-                        </footer>
+                    </header>
+                    <div class="m-fullpage__body">
+                        <slot></slot>
                     </div>
-                </article>
+                    <footer v-if="hasFooterSlot">
+                        <div class="m-fullpage__footer">
+                            <slot name="footer"></slot>
+                        </div>
+                    </footer>
+                </section>
             </div>
         </transition>
     </portal>
