--- a/src/components/fullpage/fullpage.scss
+++ b/src/components/fullpage/fullpage.scss
@@ -1,75 +1,53 @@
 @import '../../styles/abstracts/variables';
 
 .m-fullpage {
-    // display: inline-block;
-
     &__wrap {
-        transition-duration: $m-transition-duration;
         position: fixed;
         top: 0;
         right: 0;
         bottom: 0;
         left: 0;
+        display: flex;
+        justify-content: center;
         outline: none;
         min-width: $m-min-width;
+        overflow: hidden;
+        background: $m-color--grey-lightest;
 
-        &.m--is-origin {
-            &-bottom {
-                &.m--is-enter,
-                &.m--is-leave-to {
-                    .m-fullpage__article {
-                        transform: translate3d(0, 100vh, 0);
-                    }
-                }
+        &.m--is-enter-active,
+        &.m--is-leave-active {
+            transition: background $m-transition-duration--l ease;
+
+            .m-fullpage__article {
+                transition: transform $m-transition-duration--l ease;
+            }
+        }
+
+        &.m--is-enter,
+        &.m--is-leave-to {
+            background: rgba($m-color--grey-lightest, 0);
+
+            .m-fullpage__article {
+                transform: translate3d(0, 110%, 0);
             }
         }
     }
 
     &__article {
-        transition: transform $m-transition-duration ease-in-out;
-        background-color: $m-color--grey-lighter;
         transform: translate3d(0, 0, 0);
-        max-height: 100vh;
-        width: 100vw;
         cursor: auto;
         display: flex;
         flex-direction: column;
         align-items: center;
-    }
-
-    &__body {
-        display: flex;
-        flex-direction: column;
-        flex: 1 1 auto;
+        width: 100%;
+        max-width: $m-max-width--l;
+        margin: 0 auto;
         background: $m-color--white;
-        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.15);
-        height: 100vh;
-        width: 100vw;
+        box-shadow: $m-box-shadow;
 
-        .m--is-centered & {
-            max-width: 1200px;
-        }
-    }
-
-    &__close-button {
-        align-self: center;
-        margin-right: $m-spacing--l;
-
-        @media (max-width: $m-mq--min--s) {
-            margin-right: $m-spacing;
-        }
-
-        @media (max-width: $m-mq--min--s) {
-            margin-right: $m-spacing;
-        }
-
-        &:hover {
-            color: $m-color--white;
-        }
-
-        &:focus:not(:hover) {
-            background: rgba($m-color--black, 0.3);
-            color: $m-color--white;
+        > header,
+        > footer {
+            width: 100%;
         }
     }
 
@@ -80,12 +58,14 @@
     }
 
     &__header {
-        background-color: $m-color--black-grey;
+        flex-shrink: 0;
         display: flex;
         align-items: center;
         justify-content: space-between;
+        width: 100%;
+        min-height: $m-min-height-header;
         color: $m-color--white;
-        min-height: var(--m-min-height-header);
+        background: $m-color--black-grey;
 
         h1,
         h2,
@@ -103,7 +83,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            width: var(--m-min-height-header);
+            width: $m-min-height-header;
             background-color: $m-color--black-grey-darker;
         }
 
@@ -113,21 +93,22 @@
         }
     }
 
-    &__content {
-        padding: $m-spacing;
+    &__body {
+        width: 100%;
         flex: 1 1 auto;
-        overflow: auto;
+        overflow-x: hidden;
+        overflow-y: auto;
+        padding: $m-padding--l;
 
         @include m-scrollbar();
     }
 
     &__footer {
-        flex-shrink: 0;
-        box-shadow: 0 -1px 2px rgba($m-color--black, 0.1);
-        padding: $m-spacing $m-spacing--l;
+        z-index: 2;
         display: flex;
         align-items: center;
         justify-content: space-between;
-        z-index: 2;
+        padding: $m-spacing $m-spacing--l;
+        border-top: $m-border-width--s solid $m-color--border;
     }
 }
