Update transition in  m-edit-window

--- a/src/components/edit-window/edit-window.html
+++ b/src/components/edit-window/edit-window.html
@@ -1,7 +1,7 @@
 <div class="m-edit-window" ref="baseWindow">
     <slot name="trigger"></slot>
     <portal :target-el="'#' + propId">
-        <transition name="m--is">
+        <transition name="m--is" :duration="6000">
             <div class="m-edit-window__wrap"
                  :class="[{ 'm--is-open': propOpen,
                             'm--is-disabled':disabled },
