--- a/src/components/dialog/dialog.html
+++ b/src/components/dialog/dialog.html
@@ -25,11 +25,13 @@
                             </m-icon-button>
                         </div>
                     </header>
-                    <div class="m-dialog__body" :class="{ 'm--no-padding': !padding || !paddingBody }" v-if="hasDefaultSlot">
+                    <div class="m-dialog__body"
+                         :class="{ 'm--no-padding': !padding || !paddingBody }" v-if="hasDefaultSlot">
                         <slot></slot>
                     </div>
                     <footer v-if="hasFooterSlot">
-                        <div class="m-dialog__footer" :class="{ 'm--no-padding': !padding || !paddingFooter }">
+                        <div class="m-dialog__footer"
+                             :class="{ 'm--no-padding': !padding || !paddingFooter }">
                             <slot name="footer"></slot>
                         </div>
                     </footer>
