--- a/src/components/edit-window/edit-window.html
+++ b/src/components/edit-window/edit-window.html
@@ -9,8 +9,9 @@
                  v-show="propOpen">
                 <section class="m-edit-window__article" ref="article">
                     <header>
-                        <div class="m-edit-window__header">
-                            <div class="m-edit-window__header__center">
+                        <div class="m-edit-window__header"
+                             :class="{'m--no-padding': !padding || !paddingHeader}">
+                            <div class="m-edit-window__header__left">
                                 <slot name="header"></slot>
                             </div>
                             <div class="m-edit-window__header__right" v-if="hasHeaderRightSlot">
@@ -18,11 +19,13 @@
                             </div>
                         </div>
                     </header>
-                    <div class="m-edit-window__body">
+                    <div class="m-edit-window__body"
+                         :class="{ 'm--no-padding': !padding || !paddingBody }">
                         <slot></slot>
                     </div>
                     <footer>
-                        <div class="m-edit-window__footer">
+                        <div class="m-edit-window__footer"
+                             :class="{ 'm--no-padding': !padding || !paddingFooter }">
                             <slot name="footer">
                                 <div>
                                     <m-button @click="save()" class="m-edit-window__footer__save-button"><m-i18n k="m-edit-window:save"></m-i18n></m-button>
