Separate sass color variables and css custom color properties
Separate sass color variables and css custom color properties to fix performance issues

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 // ======================================================================
 @import
     'abstracts/variables',
+    'abstracts/customs-properties',
     'abstracts/var-color-calendar';
 
 // ======================================================================
