--- a/src/components/carousel-item/carousel-item.scss
+++ b/src/components/carousel-item/carousel-item.scss
@@ -1,39 +1,28 @@
 @import 'abstracts/variables';
 
-.right-to-left-enter {
-    transform: translateX(100%);
-    opacity: 0;
-}
+.m--is {
+    &-right-to-left-enter,
+    &-left-to-right-leave-to {
+        transform: translateX(100%);
+        opacity: 0;
+    }
 
-.right-to-left-enter-active {
-    transition: transform $m-transition-duration--xl, opacity $m-transition-duration--xl;
-}
+    &-right-to-left-enter-active,
+    &-left-to-right-enter-active,
+    &-right-to-left-leave-active,
+    &-left-to-right-leave-active {
+        transition: transform $m-transition-duration--xl, opacity $m-transition-duration--xl;
+    }
 
-.right-to-left-leave-active {
-    transition: transform $m-transition-duration--xl, opacity $m-transition-duration--xl;
-    position: absolute;
-}
+    &-right-to-left-leave-active,
+    &-left-to-right-leave-active  {
+        transition: transform $m-transition-duration--xl, opacity $m-transition-duration--xl;
+        position: absolute;
+    }
 
-.right-to-left-leave-to {
-    transform: translateX(-100%);
-    opacity: 0;
-}
-
-.left-to-right-enter {
-    transform: translateX(-100%);
-    opacity: 0;
-}
-
-.left-to-right-enter-active {
-    transition: transform $m-transition-duration--xl, opacity $m-transition-duration--xl;
-}
-
-.left-to-right-leave-active {
-    transition: transform $m-transition-duration--xl, opacity $m-transition-duration--xl;
-    position: absolute;
-}
-
-.left-to-right-leave-to {
-    transform: translateX(100%);
-    opacity: 0;
+    &-right-to-left-leave-to,
+    &-left-to-right-enter {
+        transform: translateX(-100%);
+        opacity: 0;
+    }
 }
