Revert colors back to hex value

--- a/src/styles/abstracts/_var-color.scss
+++ b/src/styles/abstracts/_var-color.scss
@@ -84,4 +84,4 @@ $m-color--scrollbar-light: $m-color--grey-lighter !default;
 //  Boder colors
 // ======================================================================
 $m-color--border-dark: $m-color--grey-dark !default;
-$m-color--border: $m-color--grey-lighter !default;
+$m-color--border: $m-color--grey-light !default;
