--- a/src/styles/abstracts/_cp-color.scss
+++ b/src/styles/abstracts/_cp-color.scss
@@ -6,66 +6,66 @@
     // ======================================================================
     //  Official color of Université Laval
     // ======================================================================
-    --m-color--ul-blue: rgb(0, 153, 255);
-    --m-color--ul-yellow: rgb(255, 193, 3);
-    --m-color--ul-red: rgb(224, 4, 19);
+    --m-color--ul-blue: #09f;
+    --m-color--ul-yellow: #ffc103;
+    --m-color--ul-red: #e00413;
 
     // ======================================================================
     //  Seven Shades of Grey to rules them all!
     // ======================================================================
-    --m-color--grey-darkest: rgb(31, 31, 31);
-    --m-color--grey-darker: rgb(61, 61, 61);
-    --m-color--grey-dark: rgb(105, 105, 105);
-    --m-color--grey: rgb(146, 146, 146);
-    --m-color--grey-light: rgb(215, 215, 215);
-    --m-color--grey-lighter: rgb(244, 244, 244);
-    --m-color--grey-lightest: rgb(249, 249, 249);
+    --m-color--grey-darkest: #1f1f1f;
+    --m-color--grey-darker: #3d3d3d;
+    --m-color--grey-dark: #696969;
+    --m-color--grey: #929292;
+    --m-color--grey-light: #d7d7d7;
+    --m-color--grey-lighter: #f4f4f4;
+    --m-color--grey-lightest: #f9f9f9;
 
     // ======================================================================
     //  General color
     // ======================================================================
-    --m-color--black: rgb(0, 0, 0);
+    --m-color--black: #000;
     --m-color--text: var(--m-color--grey-darker);
-    --m-color--white: rgb(255, 255, 255);
+    --m-color--white: #fff;
 
     // ======================================================================
     //  Success colors
     // ======================================================================
-    --m-color--success-dark: rgb(0, 153, 98);
-    --m-color--success: rgb(0, 199, 127);
-    --m-color--success-light: rgb(205, 243, 227);
-    --m-color--success-lightest: rgb(234, 249, 241);
+    --m-color--success-dark: #009962;
+    --m-color--success: #00c77f;
+    --m-color--success-light: #cdf3e3;
+    --m-color--success-lightest: #eaf9f1;
 
     // ======================================================================
     //  Warning colors
     // ======================================================================
     --m-color--warning: var(--m-color--ul-yellow);
-    --m-color--warning-lightest: rgb(255, 248, 230);
+    --m-color--warning-lightest: #fff8e6;
 
     // ======================================================================
     //  Error colors
     // ======================================================================
-    --m-color--error-dark: rgb(179, 4, 15);
+    --m-color--error-dark: #b3040f;
     --m-color--error: var(--m-color--ul-red);
-    --m-color--error-lightest: rgb(252, 242, 243);
+    --m-color--error-lightest: #fcf2f3;
 
     // ======================================================================
     //  Interactive colors
     // ======================================================================
-    --m-color--interactive-darker: rgb(0, 117, 195);
-    --m-color--interactive-dark: rgb(5, 135, 225);
+    --m-color--interactive-darker: #0075c3;
+    --m-color--interactive-dark: #0587e1;
     --m-color--interactive: var(--m-color--ul-blue);
-    --m-color--interactive-light: rgb(54, 173, 255);
-    --m-color--interactive-lighter: rgb(110, 210, 255);
-    --m-color--interactive-lightest: rgb(223, 250, 255);
+    --m-color--interactive-light: #36adff;
+    --m-color--interactive-lighter: #6ed2ff;
+    --m-color--interactive-lightest: #dffaff;
 
     // ======================================================================
     //  Accent colors
     // ======================================================================
-    --m-color--accent-dark: rgb(237, 133, 20);
-    --m-color--accent: rgb(243, 150, 18);
-    --m-color--accent-light: rgb(255, 170, 38);
-    --m-color--accent-lightest: rgb(255, 238, 207);
+    --m-color--accent-dark: #ed8514;
+    --m-color--accent: #f39612;
+    --m-color--accent-light: #ffaa26;
+    --m-color--accent-lightest: #ffeecf;
 
     // ======================================================================
     //  Active colors
@@ -88,6 +88,6 @@
     //  UI colors
     // ======================================================================
     --m-color--border-dark: var(--m-color--grey-dark);
-    --m-color--border: var(--m-color--grey-lighter);
+    --m-color--border: var(--m-color--grey-light);
     --m-color--header-dark: var(--m-color--grey-darkest);
 }
