--- a/src/components/file-upload/file-upload.html
+++ b/src/components/file-upload/file-upload.html
@@ -32,6 +32,9 @@
                                         <p class="m-file-upload__import-list__size">{{file.file.size | file-size}}</p>
                                     </div>
                                     <m-progress :value="file.progress" :state="getFileStatus(file)"></m-progress>
+                                    <p class="m-file-upload__import-list__error-message" v-if="getFileStatus(file) == 'error'">
+                                        <m-i18n k="m-file-upload:errorMsg"></m-i18n>
+                                    </p>
                                 </div>
                                 <m-icon-button class="m-file-upload__import-list__button" icon-name="default" button-size="32px" icon-size="12px" @click="onUploadCancel(file)"></m-icon-button>
                             </div>
