--- a/src/components/icon-file/icon-file.scss
+++ b/src/components/icon-file/icon-file.scss
@@ -13,7 +13,6 @@
         position: absolute;
         bottom: -4px;
         right: -4px;
-        opacity: 1;
 
         &.m--is-completed {
             color: $m-color--success;
@@ -29,12 +28,13 @@
 
         &.m--is-enter-active,
         &.m--is-leave-active {
-            transition: opacity $m-transition-duration--l;
+            transition: opacity $m-transition-duration--l, transform $m-transition-duration--l;
         }
 
-        &.m--is--enter,
-        &.m--is--leave-to {
-            opacity: 1;
+        &.m--is-enter,
+        &.m--is-leave-to {
+            opacity: 0;
+            transform: scale(0);
         }
     }
 }
